quick footer update to align items correctly

--- a/2_basic_site/style.css
+++ b/2_basic_site/style.css
@@ -349,6 +349,7 @@ Screen size breakpoints styling
       display:flex;
       flex-direction: column;
       align-items: center;
+      justify-content: flex-start;
   }
 
 }
